--- a/java/SampleSpring/IOC&UnitTest/.classpath
+++ b/java/SampleSpring/IOC&UnitTest/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="lib/spring-framework-bom-4.0.5.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/spring-instrument-4.0.5.RELEASE.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
